--- a/strona/index4.html
+++ b/strona/index4.html
@@ -33,7 +33,7 @@
     </tr>
     <tr>
         <td colspan="4" align="center">
-            <div1><font size="50">THE WOK 媽媽有一個兒子</font></div1>
+            <div1><font size="50">THE WOK 一個兒媽媽有子</font></div1>
         </td>
     </tr>
 </table>
