zmiana zdjecia i kodu index2

--- a/strona/index2.html
+++ b/strona/index2.html
@@ -28,12 +28,12 @@
     </tr>
     <tr>
         <td colspan="4" align="center">
-            <div2><img height="600px" width="800px" src="SI.jpg"></div2>
+            <div2><img height="600px" width="800px" src="WU.jpg"></div2>
         </td>
     </tr>
     <tr>
         <td colspan="4" align="center">
-            <div1><font size="50">SUPER IDOL 一瓶公平</font></div1>
+            <div1><font size="50">SENSEI WU 一瓶公平</font></div1>
         </td>
     </tr>
 </table>
